# clawpanel

./: CHANGELOG.md  index.html  openclaw-version-policy.json  package-lock.json  package.json
docs/: index.html  openclaw-2026-3-28-compatibility.md  openclaw-multi-instance-compatibility.md  version-maintenance.md
scripts/: dev-api.js  sync-version.js
src/: main.js  router.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  utils.rs
src-tauri/src/commands/: agent.rs  config.rs  extensions.rs  messaging.rs  mod.rs  pairing.rs  service.rs
src-tauri/src/models/: types.rs
src/components/: ai-drawer.js  engagement.js  modal.js  sidebar.js
src/lib/: app-state.js  gateway-ownership.js  tauri-api.js
src/locales/: en.json  index.js  zh-CN.json
src/locales/modules/: about.js  agentDetail.js  agents.js  assistant.js  channels.js  common.js  dashboard.js  engagement.js  security.js  services.js  settings.js  setup.js
src/pages/: about.js  agent-detail.js  agents.js  assistant.js  channels.js  chat-debug.js  dashboard.js  extensions.js  memory.js  models.js  security.js  services.js  settings.js  setup.js
src/style/: agents.css  pages.css
